--- a/projects/client/public/template.html
+++ b/projects/client/public/template.html
@@ -7,6 +7,6 @@
     <title>Vic</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-screen h-screen"></div>
   </body>
 </html>
